chore: docker configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=devicesapi
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+spring.data.redis.host=${SPRING_REDIS_HOST}
+spring.data.host.port=${SPRING_REDIS_PORT:6380}
+# Server port
+server.port=8080
+spring.redis.timeout=2000
+spring.redis.lettuce.shutdown-timeout=1000
+spring.redis.connect-timeout=2000
