--- a/infra/docker/docker-compose.yaml
+++ b/infra/docker/docker-compose.yaml
@@ -23,7 +23,9 @@ services:
       - "27017:27017"
 
   devicesapi:
-    build: .
+    build:
+      context: ../..
+      dockerfile: infra/docker/Dockerfile
     container_name: devices-api
     ports:
       - "8080:8080"
